// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flawTrackers > Correctly renders the component when there are not trackers to display 1`] = `
"<div data-v-89a61d08="">
  <div data-v-89a61d08="" class="affects-trackers">
    <div data-v-89a61d08="" class="bg-dark rounded-top-2 text-info">
      <div data-v-89a61d08="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-89a61d08="" class="m-0">Trackers</h5>
      </div>
      <!--v-if-->
      <div data-v-89a61d08="" class="trackers-toolbar p-2 pt-1">
        <div data-v-89a61d08="" class="tracker-badges">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div><button data-v-89a61d08="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-89a61d08="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-89a61d08="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-89a61d08="" class="table table-striped table-info mb-0">
        <thead data-v-89a61d08="" class="sticky-top">
          <tr data-v-89a61d08="">
            <th data-v-89a61d08="">Bug ID</th>
            <th data-v-89a61d08="">Module</th>
            <th data-v-89a61d08="">Product Stream</th>
            <th data-v-89a61d08=""><span data-v-89a61d08="" class="align-bottom me-1">Status</span><button data-v-89a61d08="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-89a61d08="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-89a61d08="" class="dropdown-menu" aria-labelledby="status-filter"></ul>
            </th>
            <th data-v-89a61d08="">Resolution</th>
            <th data-v-89a61d08=""> Created date <i data-v-89a61d08="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-89a61d08=""> Updated date <i data-v-89a61d08="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-89a61d08=""></tbody>
      </table>
      <div data-v-89a61d08=""> No trackers to display </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`flawTrackers > Correctly renders the component when there are trackers to display 1`] = `
"<div data-v-89a61d08="">
  <div data-v-89a61d08="" class="affects-trackers">
    <div data-v-89a61d08="" class="bg-dark rounded-top-2 text-info">
      <div data-v-89a61d08="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-89a61d08="" class="m-0">Trackers</h5>
      </div>
      <!--v-if-->
      <div data-v-89a61d08="" class="trackers-toolbar p-2 pt-1">
        <div data-v-89a61d08="" class="tracker-badges">
          <div data-v-89a61d08="" class="per-page-btn btn btn-sm badge"><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-89a61d08="" class="mx-2 my-auto">Per page: 10</span><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
          <!--v-if-->
          <div data-v-89a61d08="" class="badge" title="Trackers displayed in current page"><span data-v-89a61d08="">Displaying 6</span></div>
        </div><button data-v-89a61d08="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-89a61d08="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-89a61d08="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-89a61d08="" class="table table-striped table-info mb-0">
        <thead data-v-89a61d08="" class="sticky-top">
          <tr data-v-89a61d08="">
            <th data-v-89a61d08="">Bug ID</th>
            <th data-v-89a61d08="">Module</th>
            <th data-v-89a61d08="">Product Stream</th>
            <th data-v-89a61d08=""><span data-v-89a61d08="" class="align-bottom me-1">Status</span><button data-v-89a61d08="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-89a61d08="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-89a61d08="" class="dropdown-menu" aria-labelledby="status-filter">
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">NEW</span></a></li>
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">CLOSED</span></a></li>
              </ul>
            </th>
            <th data-v-89a61d08="">Resolution</th>
            <th data-v-89a61d08=""> Created date <i data-v-89a61d08="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-89a61d08=""> Updated date <i data-v-89a61d08="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0006 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-006</td>
            <td data-v-89a61d08="">openshift-5</td>
            <td data-v-89a61d08="">CLOSED</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-07-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-07-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0005 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-005</td>
            <td data-v-89a61d08="">openshift-5</td>
            <td data-v-89a61d08="">NEW</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-08-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-08-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0004 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-004</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">CLOSED</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-09-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-09-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0003 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-003</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">NEW</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-10-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-10-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0002 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-002</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">CLOSED</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-11-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-11-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0001 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-001</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">NEW</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-12-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-12-01 13:06 UTC</td>
          </tr>
        </tbody>
      </table>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`flawTrackers > Displays embedded trackers manager 1`] = `
"<div data-v-89a61d08="">
  <div data-v-89a61d08="" class="affects-trackers">
    <div data-v-89a61d08="" class="bg-dark rounded-top-2 text-info">
      <div data-v-89a61d08="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-89a61d08="" class="m-0">Trackers</h5>
      </div>
      <!--v-if-->
      <div data-v-89a61d08="" class="trackers-toolbar p-2 pt-1">
        <div data-v-89a61d08="" class="tracker-badges">
          <div data-v-89a61d08="" class="per-page-btn btn btn-sm badge"><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-89a61d08="" class="mx-2 my-auto">Per page: 10</span><i data-v-89a61d08="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
          <!--v-if-->
          <div data-v-89a61d08="" class="badge" title="Trackers displayed in current page"><span data-v-89a61d08="">Displaying 6</span></div>
        </div><button data-v-89a61d08="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-89a61d08="" class="bi bi-eye-slash-fill"></i> Hide Trackers Manager </button>
      </div>
    </div>
    <div data-v-89a61d08="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-89a61d08="" class="table table-striped table-info mb-0">
        <thead data-v-89a61d08="" class="sticky-top">
          <tr data-v-89a61d08="">
            <th data-v-89a61d08="">Bug ID</th>
            <th data-v-89a61d08="">Module</th>
            <th data-v-89a61d08="">Product Stream</th>
            <th data-v-89a61d08=""><span data-v-89a61d08="" class="align-bottom me-1">Status</span><button data-v-89a61d08="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-89a61d08="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-89a61d08="" class="dropdown-menu" aria-labelledby="status-filter">
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">NEW</span></a></li>
                <li data-v-89a61d08=""><a data-v-89a61d08="" href="#" class="btn py-0 dropdown-item"><input data-v-89a61d08="" type="checkbox" class="form-check-input me-2"><span data-v-89a61d08="">CLOSED</span></a></li>
              </ul>
            </th>
            <th data-v-89a61d08="">Resolution</th>
            <th data-v-89a61d08=""> Created date <i data-v-89a61d08="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-89a61d08=""> Updated date <i data-v-89a61d08="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-89a61d08="">
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0006 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-006</td>
            <td data-v-89a61d08="">openshift-5</td>
            <td data-v-89a61d08="">CLOSED</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-07-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-07-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0005 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-005</td>
            <td data-v-89a61d08="">openshift-5</td>
            <td data-v-89a61d08="">NEW</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-08-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-08-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0004 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-004</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">CLOSED</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-09-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-09-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0003 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-003</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">NEW</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-10-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-10-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0002 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-002</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">CLOSED</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-11-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-11-01 13:06 UTC</td>
          </tr>
          <tr data-v-89a61d08="">
            <td data-v-89a61d08="">
              <routerlink data-v-89a61d08="" to="[object Object]">XXXX-0001 <i data-v-89a61d08="" class="bi-box-arrow-up-right"></i></routerlink>
            </td>
            <td data-v-89a61d08="">xxxx-0-001</td>
            <td data-v-89a61d08="">openshift-1</td>
            <td data-v-89a61d08="">NEW</td>
            <td data-v-89a61d08=""></td>
            <td data-v-89a61d08="">2024-12-01 13:05 UTC</td>
            <td data-v-89a61d08="">2024-12-01 13:06 UTC</td>
          </tr>
        </tbody>
      </table>
      <!--v-if-->
    </div>
  </div>
  <div data-v-f682b1b0="" data-v-89a61d08="" class="trackers-manager py-3 px-4 embedded">
    <h4 data-v-f682b1b0="" class="mb-2 d-flex"> Trackers Manager </h4>
    <div data-v-f682b1b0="" class="trackers-search-bar gap-2"><input data-v-f682b1b0="" type="text" class="form-control form-control-sm" placeholder="Filter by stream or component name"><button data-v-f682b1b0="" type="button" disabled="" class="btn btn-sm btn-black"><i data-v-f682b1b0="" class="bi bi-check-all"></i> Select All </button><button data-v-f682b1b0="" type="button" disabled="" class="btn btn-sm btn-black"><i data-v-f682b1b0="" class="bi bi-x-square"></i> Deselect All </button></div>
    <div class="row mt-3" data-v-f682b1b0="">
      <div class="col" data-v-f682b1b0="">
        <h5 class="d-inline-block fs-5" data-v-f682b1b0="">Available Trackers</h5><span class="fst-italic" data-v-f682b1b0=""> (<i class="bi bi-box-arrow-in-right" data-v-f682b1b0=""></i> indicates a Suggested Tracker) </span>
      </div>
      <div class="col" data-v-f682b1b0="">
        <h6 class="fs-5" data-v-f682b1b0="">Selected To File</h6>
      </div>
    </div>
    <div data-v-f682b1b0="" class="row">
      <div data-v-f682b1b0="" class="col">
        <div data-v-f682b1b0="" class="mb-2">
          <div data-v-f682b1b0="" class="ms-2 mb-1"><span data-v-f682b1b0="" class="spinner-border spinner-border-sm" role="status"><span data-v-f682b1b0="" class="visually-hidden">Loading...</span></span><span data-v-f682b1b0="">Loading trackers…</span></div>
          <!--v-if-->
        </div>
      </div>
      <div data-v-f682b1b0="" class="col">
        <div data-v-f682b1b0="" class="mb-2">
          <div data-v-f682b1b0="" class="ms-2 mb-1"><span data-v-f682b1b0="" class="spinner-border spinner-border-sm" role="status"><span data-v-f682b1b0="" class="visually-hidden">Loading...</span></span><span data-v-f682b1b0="">Loading trackers…</span></div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-f682b1b0="" class="row mt-4">
      <div data-v-f682b1b0="" class="col mb-2">
        <h5 data-v-f682b1b0="">Already Filed</h5>
        <div data-v-f682b1b0="" class="ms-2 mb-1"><span data-v-f682b1b0="" class="spinner-border spinner-border-sm" role="status"><span data-v-f682b1b0="" class="visually-hidden">Loading...</span></span><span data-v-f682b1b0="">Loading trackers…</span></div>
        <!--v-if-->
      </div>
      <div data-v-f682b1b0="" class="col">
        <div data-v-f682b1b0="">
          <h5 data-v-f682b1b0="">Untrackable Affects <i data-v-f682b1b0="" class="bi bi-exclamation-circle text-danger" title="These affects do not have available trackers. This may indicate an issue with product defintions. Please contact the OSIDB/OSIM team for assistance."></i></h5>
          <div data-v-f682b1b0="" class="ms-2 mb-1"><span data-v-f682b1b0="" class="spinner-border spinner-border-sm" role="status"><span data-v-f682b1b0="" class="visually-hidden">Loading...</span></span><span data-v-f682b1b0="">Loading trackers…</span></div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div><button data-v-f682b1b0="" type="button" class="btn btn-sm btn-black osim-file-trackers mt-4" disabled=""><i data-v-f682b1b0="" class="bi bi-archive"></i> File Selected Trackers </button>
  </div>
</div>"
`;
